# cortx-motr-1

./: .gdbinit  .gdbinit.py  .gitignore  .gitlab-ci.yml  .gitmodules  .gitreview  1  123.p  23.txt  28.txt  AUTHORS  Kbuild.in  LICENCE  Makefile.am  Makefile.ff  Makefile.in  Makefile.xc  README  SConstruct  autogen.sh  cachegrind.out.14682  cachegrind.out.27601  callgrind.out.14684  callgrind.out.27603  circle.yml  circle.yml.old-v1.0  colibri.spec  colibri.spec.in  config.h.in  config.h.in~  configure  configure.ac  configure.in  gdbinit  gdbinit.py  massif.out.14687  massif.out.27606  mero-jenkins.spec  mero-mock.cfg  mero.pc.in  (+13 more)
addb/: .gitignore  Kbuild.sub  Makefile.am  Makefile.in  Makefile.sub  addb.c  addb.ff  addb.h  addb_console.c  addb_counter.c  addb_ct.c  addb_ctxobj.c  addb_evmgr.c  addb_fop.c  addb_fops.c  addb_fops.h  addb_macros.h  addb_mc.c  addb_monitor.c  addb_monitor.h  addb_monitor_wire.h  addb_pfom.c  addb_pvt.h  addb_rec.c  addb_rpcsink.c  addb_rt.c  addb_store.c  addb_svc.c  addb_svc.h  addb_ts.c  addb_wire.h  addbmc.dia
colibri/: .gitignore  Makefile.am  Makefile.in  Makefile.sub  colibri-pub.api  colibri.c  colibri_setup.c  colibri_setup.h  cs_internal.h  cs_main.c  devices.sh  init.c  init.h  magic.h
conf/: .gitignore  Kbuild.sub  Makefile.am  Makefile.sub  addb.c  addb.h  buf_ext.c  buf_ext.h  cache.c  cache.h  conf_addb.c  conf_addb.h  conf_fom.c  conf_fom.h  conf_fop.c  conf_fop.h  conf_xcode.c  conf_xcode.h  confc.c  confc.h  confd.c  confd.h  confd_fom.c  confd_fom.h  confd_hack.c.in  confd_hack.h  confd_service.c  confd_stob.c  db.c  db.h  dir.c  dir.h  dir_iter.c  dir_iter.h  diter.c  diter.h  flip_fom.c  flip_fop.h  fop.c  fop.h  (+31 more)
console/: .gitignore  Makefile.am  Makefile.sub  console.c  console.ff  console.h  console_fom.c  console_fom.h  console_fop.c  console_fop.h  console_it.c  console_it.h  console_mesg.c  console_mesg.h  console_xc.ff  console_yaml.c  console_yaml.h  main.c
db/: Kbuild.sub  Makefile.am  Makefile.sub  db.c  db.h  db_addb.h  db_common.c  db_common.h  db_impl.h  extmap.c  extmap.h  extmap_internal.h  extmap_seg.h  nobl.h
desim/: Makefile.am  Makefile.sub  README  c2t1fs.c  c2t1fs.h  cheetah  chs.c  chs.h  client.c  client.h  cnt.c  cnt.h  elevator.c  elevator.h  m0t1fs.c  m0t1fs.h  net.c  net.h  sim.c  sim.h  storage.h  test.c
dtm/: Kbuild.sub  Makefile.am  Makefile.in  Makefile.sub  catalogue.c  catalogue.h  domain.h  dtm.c  dtm.h  dtm_internal.h  dtm_update.h  dtx.c  dtx.h  factory.h  fol.c  fol.h  history.c  history.h  ltx.c  ltx.h  machine.c  machine.h  nucleus.c  nucleus.h  object.c  object.h  operation.c  operation.h  remote.c  remote.h  update.c  update.h  verno.c  verno.h
fid/: Kbuild.sub  Makefile.am  Makefile.sub  fid.c  fid.ff  fid.h
fol/: Makefile.am  Makefile.in  Makefile.sub  fol.c  fol.h  fol_private.h  fol_template.c  lsn.h
fop/: .gitignore  Kbuild.sub  Makefile.am  Makefile.in  Makefile.sub  fom.c  fom.h  fom_generic.c  fom_generic.ff  fom_generic.h  fom_generic_fops.c  fom_generic_fops.ff  fom_generic_xc.ff  fom_long_lock.c  fom_long_lock.h  fom_long_lock_bob.c  fom_long_lock_bob.h  fom_simple.c  fom_simple.h  fop.c  fop.h  fop2c  fop2c.in  fop_addb.h  fop_base.c  fop_base.h  fop_format.c  fop_format.h  fop_format_c.c  fop_format_def.h  fop_item_type.c  fop_item_type.h  fop_iterator.c  fop_iterator.h  fop_onwire.c  fop_rate_monitor.c  fop_rate_monitor.h  fop_user.h
ioservice/: .gitignore  Kbuild.sub  Makefile.am  Makefile.sub  cob_foms.c  cob_foms.h  cobfid_map.c  cobfid_map.h  fid_convert.c  fid_convert.h  io_addb2.h  io_buf_pool.c  io_buf_pool.h  io_buf_prealloc.c  io_device.c  io_device.h  io_fol.ff  io_foms.c  io_foms.h  io_fops.c  io_fops.ff  io_fops.h  io_fops_def.c  io_fops_def.h  io_fops_xc.ff  io_service.c  io_service.h  io_service_addb.h  ios_start_sm.c  ios_start_sm.h  storage_dev.c  storage_dev.h
layout/: Kbuild.sub  Makefile.am  Makefile.sub  composite.c  composite.h  formula_enum.c  formula_enum.h  layout.c  layout.h  layout_addb.h  layout_db.c  layout_db.h  layout_internal.h  layout_pver.c  layout_pver.h  linear_enum.c  linear_enum.h  list_enum.c  list_enum.h  pdclust.c  pdclust.h
lib/: Kbuild.sub  Makefile.am  Makefile.in  Makefile.sub  adt.h  aptr.c  aptr.h  aqueue.c  aqueue.h  arith.h  assert.c  assert.h  atomic.h  bitmap.c  bitmap.h  bitstring.c  bitstring.h  bob.c  bob.h  buf.c  buf.h  byteorder.h  c2bitmap.h  c2bitops.c  c2bitops.h  c2lib.c  c2list.c  c2list.h  c2queue.c  c2queue.h  cache.c  cache.h  cc.c  cc.h  cdefs.h  chan.c  chan.h  checksum.c  checksum.h  circular_queue.c  (+77 more)
mds/: Makefile.am  Makefile.in  mds.c
mdservice/: Kbuild.sub  Makefile.am  Makefile.sub  fsync_foms.c  fsync_foms.h  fsync_fops.c  fsync_fops.h  md_foms.c  md_foms.h  md_fops.c  md_fops.ff  md_fops.h  md_service.c  md_service.h  mdservice_addb.h
net/: .gitignore  Kbuild.sub  Makefile.am  Makefile.in  Makefile.sub  buf.c  buffer_pool.c  buffer_pool.h  bulk_mem.h  bulk_sunrpc.h  connection.c  connection.h  domain.c  ep.c  lnet.h  module.c  module.h  net.c  net.h  net_addb.h  net_buffer_pool.c  net_buffer_pool.h  net_cli.c  net_internal.h  net_otw_types.ff  net_otw_types.h  net_srv.c  net_types.h  net_utils.c  net_xdr.c  programs.h  tm.c  tm_provision.c  xdr.h
reqh/: .gitignore  Makefile.am  Makefile.sub  reqh.c  reqh.h  reqh_addb.h  reqh_fops.c  reqh_fops.ff  reqh_fops_u.c  reqh_fops_u.h  reqh_fops_xc.ff  reqh_fp.c  reqh_fp.h  reqh_generic.c  reqh_service.c  reqh_service.h
rm/: Kbuild.sub  Makefile  Makefile.am  Makefile.in  Makefile.sub  file.c  file.h  rings.c  rings.h  rm.c  rm.ff  rm.h  rm_addb.h  rm_foms.c  rm_foms.h  rm_fop.c  rm_fop.h  rm_fop_init.c  rm_fops.c  rm_fops.h  rm_ha.c  rm_ha.h  rm_internal.h  rm_rwlock.c  rm_rwlock.h  rm_service.c  rm_service.h  rm_xc.ff  rmservice_addb.h  rmx.c
rpc/: .gitignore  Kbuild.sub  Makefile.am  Makefile.in  Makefile.sub  addb2.h  at.c  at.h  bulk.c  bulk.h  client.c  compound.c  compound.h  compound_cli.h  compound_srv.h  compound_types.h  conn.c  conn.h  conn_internal.h  formation.c  formation.h  formation2.c  formation2.h  frmops.c  ha.h  (+77 more)
(+6876 files in other folders)
